kubernetes/namespaces/automation/n8n/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      securityContext:
        fsGroup: 1024
      containers:
        - image: docker.n8n.io/n8nio/n8n:latest
          imagePullPolicy: Always
          name: n8n
          ports:
            - name: http
              containerPort: 5678
          volumeMounts:
            - name: n8n-storage
              mountPath: /home/node
      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: n8n-storage
