kubernetes/namespaces/automation/n8n/service.yml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  selector:
    app: n8n
  # I'm using a NodePort only to access the service in my local
  # network. External traffic is managed through a cloudflare tunnel.
  type: NodePort
  ports:
    - port: 80
      targetPort: http
